corrected partial function

--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/babel src -d dist",
-    "test": "jest --coverage --color"
+    "test": "./node_modules/.bin/jest"
   },
   "keywords": [
     "functional"
   ],
   "author": "Roy Stewart",
-  "license": "ISC",
+  "license": "MIT",
   "babel": {
     "presets": [
       "@babel/preset-env"
     ]
   },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
+    "babel-jest": "^24.3.1",
     "babel-loader": "^8.0.5",
+    "jest": "^24.3.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   }
