--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "functional-collections",
+  "name": "collection-ops",
   "version": "0.2.0",
   "description": "functional programming library to simplify collection operations in javascript",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest"
+    "test": "./node_modules/.bin/jest",
+    "docs": "./node_modules/.bin/jsdoc README.md index.js -d docs"
   },
   "keywords": [
     "functional programming",
@@ -18,6 +19,7 @@
   },
   "jest": {},
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jsdoc": "^3.6.4"
   }
 }
