changed module imports style

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "collection-ops",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "functional programming library to simplify collection operations in javascript",
+  "homepage": "http://collection-ops.hdgenius.me/",
+  "bugs": {
+    "url": "https://github.com/roy-stewart/CollectionOps/issues"
+  },
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
@@ -11,7 +15,7 @@
     "functional programming",
     "collections"
   ],
-  "type": "module",
+  "type": "commonjs",
   "author": "Roy Stewart",
   "license": "MIT",
   "jest": {},
