--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "collection-ops",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "functional programming library to simplify collection operations in javascript",
   "homepage": "http://collection-ops.hdgenius.me/",
   "bugs": {
     "url": "https://github.com/roy-stewart/CollectionOps/issues"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
-    "docs": "./node_modules/.bin/jsdoc README.md index.js -d docs"
+    "docs": "./node_modules/.bin/jsdoc -R README.md -r src -d docs"
   },
   "keywords": [
     "functional programming",
