--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "devDependencies": {
     "jest": "^26.5.3",
     "jsdoc": "^3.6.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/roy-stewart/CollectionOps.git"
   }
 }
