--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/roy-stewart/CollectionOps.git"
+  },
+  "engines" : {
+    "node" : ">=0.12"
   }
 }
