--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: npm ci
-    - name: Test
-      run: npm test
+    - name: Run unit tests
+      run: npm run test
+    - name: Check code
+      run: npm run code-check
