--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^26.6.3",
-    "jsdoc": "^3.6.6"
+    "jsdoc": "^3.6.6",
+    "prettier": "^2.4.1"
   },
   "repository": {
     "type": "git",
