--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,5 @@
 {
     "tabWidth": 4,
-    "semi": true,
     "singleQuote": true,
-    "printWidth": 120,
-    "endOfLine": "auto"
+    "printWidth": 120
 }
